Closed Bug 679877 Opened 14 years ago Closed 14 years ago

cannot get classDescription of Components.ID, Components.Exception and Components.Constructor

Categories

(Core :: XPConnect, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla9

People

(Reporter: arno, Assigned: mrbkap)

Details

Attachments

(1 file)

Components.ID.QueryInterface(Components.interfaces.nsIClassInfo).classDescription; Components.Exception.QueryInterface(Components.interfaces.nsIClassInfo).classDescription; Components.Constructor.QueryInterface(Components.interfaces.nsIClassInfo).classDescription; throw exceptions: "Cannot modify properties of a WrappedNative"
Attached patch Proposed fixSplinter Review
Once we've mutated the set, new properties go on the object itself. This means that classes that have helpers and don't declare all of their interfaces in classinfo have to have the ALLOW_PROP_MODS_DURING_RESOLVE flag.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #553921 - Flags: review?(jst)
Attachment #553921 - Flags: review?(jst) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: