Bug 679877 - Allow properties to be resolved on these objects. r=jst